fix link color for dark mode

--- a/css/articles.css
+++ b/css/articles.css
@@ -406,7 +406,7 @@ body.light-mode {
   color: #111;
 }
 body.light-mode a {
-  color: #5fc9f8;
+  color: #147efb;
 }
 body.light-mode button {
   background-color: #111;
